<resources>
    <string name="app_name">Animation</string>
    <string name="btn_start">Начать</string>
    <string name="tv_sign_up">Регистрация</string>
    <string name="et_login">login</string>
    <string name="et_password">password</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="tv_intro">Давным-давно, в далёкой-далёкой галактике...</string>
    <string name="tv_main">Неспокойные времена настали для Галактической Республики. Налогообложение торговых путей к отдаленным солнечным системам стало причиной раздоров.
\n\nВ стремлении добиться своего обуянная алчностью Торговая Федерация с помощью мощных боевых кораблей взяла в кольцо блокады маленькую планету Набу, лишив её всех поставок.
\n\nВ то время как члены Конгресса Республики ведут напряженные дебаты в связи с тревожными событиями, Верховный канцлер втайне от всех поручил двум рыцарям-джедаям — хранителям мира и справедливости в Галактике — урегулировать конфликт…
</string>
    <string name="tv_header">Эпизод I\nСКРЫТАЯ УГРОЗА</string>
</resources>